--- a/7.13浮动/今日作业/腾讯网.html
+++ b/7.13浮动/今日作业/腾讯网.html
@@ -11,7 +11,59 @@
         <div class="box">
             <div class="text_left">
                 <h3>
-                    <a style="color: #333;" href="">7月24日起内地投资者不得再通过沪深股通买入A股，北向资金大变化</a>
+                    <a style="color: #333;" href="">所有的曾经都将成为背景，衬托终将破晓的黎明。</a>
+                </h3>
+                <div class="footer">
+                    <div class="f1 ">
+                        <a style="color: #666;" href="#">克拉女神</a>
+                        <span>半小时前</span>
+                    </div>
+                    <div class="f2 ">
+                        <div class="f2_div ">
+                           <div> <i class="iconfont icon-fenxiang clearb"></i>
+                            <span style="float: right;">分享</span></div>
+                        </div>
+                        <div class="f2_div2 ">
+                           <div> <i class="iconfont icon-fenxiang icon-xiaoxi"></i>
+                            <span style="float: right;">897</span></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="text_img">
+               <img style="width: 100%;height: 100%;" src="https://www.umeitu.com/d/file/20221126/5b61e8ca94db4d32370af4fc54dd169a.jpg" alt="">
+            </div>
+        </div>
+        <div class="box">
+            <div class="text_left">
+                <h3>
+                    <a style="color: #333;" href="">你不是暗淡渺小的星光 而是囊括了明月的整个银河</a>
+                </h3>
+                <div class="footer">
+                    <div class="f1 ">
+                        <a style="color: #666;" href="#">绅士约拍</a>
+                        <span>1小时前</span>
+                    </div>
+                    <div class="f2 ">
+                        <div class="f2_div ">
+                           <div> <i class="iconfont icon-fenxiang clearb"></i>
+                            <span style="float: right;">分享</span></div>
+                        </div>
+                        <div class="f2_div2 ">
+                           <div> <i class="iconfont icon-fenxiang icon-xiaoxi"></i>
+                            <span style="float: right;">991</span></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="text_img">
+               <img style="width: 100%;height: 100%;" src="https://mm.ojbkcdn.com/a/202112/qkp1gzy2td4.jpg" alt="">
+            </div>
+        </div>
+        <div class="box">
+            <div class="text_left">
+                <h3>
+                    <a style="color: #333;" href="">有时候，坚持了你最不想干的事情之后，便可得到你想要的东西</a>
                 </h3>
                 <div class="footer">
                     <div class="f1 ">
@@ -25,13 +77,13 @@
                         </div>
                         <div class="f2_div2 ">
                            <div> <i class="iconfont icon-fenxiang icon-xiaoxi"></i>
-                            <span style="float: right;">1</span></div>
+                            <span style="float: right;">199</span></div>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="text_img">
-               <img style="width: 100%;height: 100%;" src="https://npm.elemecdn.com/mztstatic@1.2.25/img/photo.jpg" alt="">
+               <img style="width: 100%;height: 100%;" src="https://mm.ojbkcdn.com/a/202112/blyrv2hgak3.jpg" alt="">
             </div>
         </div>
         <div class="box">
@@ -57,59 +109,7 @@
                 </div>
             </div>
             <div class="text_img">
-               <img style="width: 100%;height: 100%;" src="https://npm.elemecdn.com/mztstatic@1.2.25/img/photo.jpg" alt="">
-            </div>
-        </div>
-        <div class="box">
-            <div class="text_left">
-                <h3>
-                    <a style="color: #333;" href="">7月24日起内地投资者不得再通过沪深股通买入A股，北向资金大变化</a>
-                </h3>
-                <div class="footer">
-                    <div class="f1 ">
-                        <a style="color: #666;" href="#">李云飞</a>
-                        <span>10小时前</span>
-                    </div>
-                    <div class="f2 ">
-                        <div class="f2_div ">
-                           <div> <i class="iconfont icon-fenxiang clearb"></i>
-                            <span style="float: right;">分享</span></div>
-                        </div>
-                        <div class="f2_div2 ">
-                           <div> <i class="iconfont icon-fenxiang icon-xiaoxi"></i>
-                            <span style="float: right;">1</span></div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="text_img">
-               <img style="width: 100%;height: 100%;" src="https://npm.elemecdn.com/mztstatic@1.2.25/img/photo.jpg" alt="">
-            </div>
-        </div>
-        <div class="box">
-            <div class="text_left">
-                <h3>
-                    <a style="color: #333;" href="">7月24日起内地投资者不得再通过沪深股通买入A股，北向资金大变化</a>
-                </h3>
-                <div class="footer">
-                    <div class="f1 ">
-                        <a style="color: #666;" href="#">李云飞</a>
-                        <span>10小时前</span>
-                    </div>
-                    <div class="f2 ">
-                        <div class="f2_div ">
-                           <div> <i class="iconfont icon-fenxiang clearb"></i>
-                            <span style="float: right;">分享</span></div>
-                        </div>
-                        <div class="f2_div2 ">
-                           <div> <i class="iconfont icon-fenxiang icon-xiaoxi"></i>
-                            <span style="float: right;">1</span></div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="text_img">
-               <img style="width: 100%;height: 100%;" src="https://s.iimzt.com/thumb/91921/480.jpg" alt="">
+               <img style="width: 100%;height: 100%;" src="https://mm.ojbkcdn.com/a/202112/ngy2y54mcoc.jpg" alt="">
             </div>
         </div>
     </div>
