--- a/7.18css的三大特性/表格列表作业/5.京东首页顶部.html
+++ b/7.18css的三大特性/表格列表作业/5.京东首页顶部.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./京东nav.css">
+    <link rel="stylesheet" href="./5.京东首页顶部.css">
 </head>
 
 <body>
@@ -21,7 +21,7 @@
                 <li class="qwe">|</li>
                 <li class="nav_box_li"><a href="">我的订单</a></li>
                 <li class="qwe">|</li>
-                <li style="position: relative;" class="nav_box_li , after"><a href="">我的京东 ⇓</a>
+                <li style="position: relative;" class="nav_box_li , after"><a href="">我的京东</a>
                     <span class="none">
                         <ul class="my_div">
                             <li>
@@ -74,7 +74,7 @@
                     </span>
                 </li>
                 <li class="qwe">|</li>
-                <li class="nav_box_li , after"><a style="color: red;" href="">企业采购 ⇓</a>
+                <li class="nav_box_li , after"><a style="color: red;" href="">企业采购</a>
                     <span class="none">
                         <ul class="my_div">
                             <li>
@@ -127,9 +127,9 @@
                     </span>
                 </li>
                 <li class="qwe">|</li>
-                <li class="nav_box_li , after"><a href="">商家服务 ⇓</a></li>
+                <li class="nav_box_li , after"><a href="">商家服务</a></li>
                 <li class="qwe">|</li>
-                <li class="nav_box_li , after"><a href="">网站导航 ⇓</a></li>
+                <li class="nav_box_li , after"><a href="">网站导航</a></li>
                 <li class="qwe">|</li>
                 <li class="nav_box_li"><a href="">手机京东</a></li>
                 <li class="qwe">|</li>
