--- a/7.20 flex/动画元素作业/03世界工厂一条龙+苏宁易购侧边栏/首页+侧边栏.html
+++ b/7.20 flex/动画元素作业/03世界工厂一条龙+苏宁易购侧边栏/首页+侧边栏.html
@@ -1806,7 +1806,8 @@
                 </p>
                 <p class="bei-box">
                     <a href="#">
-                        <img src="https://static.gcimg.net//gongchang2022/2022/0627/ygwab.png" alt="">
+                        <img style="position: relative;
+                        top: 4px;" src="https://static.gcimg.net//gongchang2022/2022/0627/ygwab.png" alt="">
                         <span>豫公网安备 41019702002935号</span>
                     </a>
                 </p>
@@ -1814,5 +1815,4 @@
         </div>
     </div>
 </body>
-
 </html>
