--- a/7.24移动端的web/移动端作业/blblrem.html
+++ b/7.24移动端的web/移动端作业/blblrem.html
@@ -156,7 +156,7 @@
 		}
 
 		.m-navbar .right .nav-open-app-img {
-			width: 19.2vw;
+			width: 9rem;
 			margin-left: 2.13333vw;
 			height: 6.4vw;
 			margin-top: 2.66667vw;
@@ -164,22 +164,22 @@
 		}
 
 		.buttom {
-			width: 100vw;
-			height: 9.4vw;
+			width: 46.875rem;
+			height: 4.40625rem;
 			display: flex;
 			align-items: center;
 		}
 
 		.button-ul {
-			width: 100vw;
+			width: 46.875rem;
 			display: flex;
 			/* flex-wrap: nowrap; */
 			justify-content: space-between;
 		}
 
 		.button-ul li {
-			height: 10.66667vw;
-			line-height: 10.66667vw;
+			height: 5rem;
+			line-height: 5rem;
 			display: inline-block;
 			text-align: center;
 			vertical-align: middle;
@@ -271,11 +271,11 @@
 						alt="" />
 					<div class="count">
 						<span>
-							<i class="iconfont icon-24gf-playSquare" style="margin-right: 1.2vw"></i>
+							<i class="iconfont icon-24gf-playSquare" style="margin-right: .5625rem"></i>
 							67.9万
 						</span>
 						<span>
-							<i class="iconfont icon-comment" style="margin-right: 1.2vw"></i>
+							<i class="iconfont icon-comment" style="margin-right: .5625rem"></i>
 							1386
 						</span>
 					</div>
@@ -289,11 +289,11 @@
 						alt="" />
 					<div class="count">
 						<span>
-							<i class="iconfont icon-24gf-playSquare" style="margin-right: 1.2vw"></i>
+							<i class="iconfont icon-24gf-playSquare" style="margin-right: .5625rem"></i>
 							67.9万
 						</span>
 						<span>
-							<i class="iconfont icon-comment" style="margin-right: 1.2vw"></i>
+							<i class="iconfont icon-comment" style="margin-right: .5625rem"></i>
 							1386
 						</span>
 					</div>
@@ -307,11 +307,11 @@
 						alt="" />
 					<div class="count">
 						<span>
-							<i class="iconfont icon-24gf-playSquare" style="margin-right: 1.2vw"></i>
+							<i class="iconfont icon-24gf-playSquare" style="margin-right: .5625rem"></i>
 							67.9万
 						</span>
 						<span>
-							<i class="iconfont icon-comment" style="margin-right: 1.2vw"></i>
+							<i class="iconfont icon-comment" style="margin-right: .5625rem"></i>
 							1386
 						</span>
 					</div>
@@ -325,11 +325,11 @@
 						alt="" />
 					<div class="count">
 						<span>
-							<i class="iconfont icon-24gf-playSquare" style="margin-right: 1.2vw"></i>
+							<i class="iconfont icon-24gf-playSquare" style="margin-right: .5625rem"></i>
 							67.9万
 						</span>
 						<span>
-							<i class="iconfont icon-comment" style="margin-right: 1.2vw"></i>
+							<i class="iconfont icon-comment" style="margin-right: .5625rem"></i>
 							1386
 						</span>
 					</div>
@@ -343,11 +343,11 @@
 						alt="" />
 					<div class="count">
 						<span>
-							<i class="iconfont icon-24gf-playSquare" style="margin-right: 1.2vw"></i>
+							<i class="iconfont icon-24gf-playSquare" style="margin-right: .5625rem"></i>
 							67.9万
 						</span>
 						<span>
-							<i class="iconfont icon-comment" style="margin-right: 1.2vw"></i>
+							<i class="iconfont icon-comment" style="margin-right: .5625rem"></i>
 							1386
 						</span>
 					</div>
@@ -361,11 +361,11 @@
 						alt="" />
 					<div class="count">
 						<span>
-							<i class="iconfont icon-24gf-playSquare" style="margin-right: 1.2vw"></i>
+							<i class="iconfont icon-24gf-playSquare" style="margin-right: .5625rem"></i>
 							67.9万
 						</span>
 						<span>
-							<i class="iconfont icon-comment" style="margin-right: 1.2vw"></i>
+							<i class="iconfont icon-comment" style="margin-right: .5625rem"></i>
 							1386
 						</span>
 					</div>
@@ -379,11 +379,11 @@
 						alt="" />
 					<div class="count">
 						<span>
-							<i class="iconfont icon-24gf-playSquare" style="margin-right: 1.2vw"></i>
+							<i class="iconfont icon-24gf-playSquare" style="margin-right: .5625rem"></i>
 							67.9万
 						</span>
 						<span>
-							<i class="iconfont icon-comment" style="margin-right: 1.2vw"></i>
+							<i class="iconfont icon-comment" style="margin-right: .5625rem"></i>
 							1386
 						</span>
 					</div>
@@ -397,11 +397,11 @@
 						alt="" />
 					<div class="count">
 						<span>
-							<i class="iconfont icon-24gf-playSquare" style="margin-right: 1.2vw"></i>
+							<i class="iconfont icon-24gf-playSquare" style="margin-right: .5625rem"></i>
 							67.9万
 						</span>
 						<span>
-							<i class="iconfont icon-comment" style="margin-right: 1.2vw"></i>
+							<i class="iconfont icon-comment" style="margin-right: .5625rem"></i>
 							1386
 						</span>
 					</div>
@@ -415,11 +415,11 @@
 						alt="" />
 					<div class="count">
 						<span>
-							<i class="iconfont icon-24gf-playSquare" style="margin-right: 1.2vw"></i>
+							<i class="iconfont icon-24gf-playSquare" style="margin-right: .5625rem"></i>
 							67.9万
 						</span>
 						<span>
-							<i class="iconfont icon-comment" style="margin-right: 1.2vw"></i>
+							<i class="iconfont icon-comment" style="margin-right: .5625rem"></i>
 							1386
 						</span>
 					</div>
@@ -433,11 +433,29 @@
 						alt="" />
 					<div class="count">
 						<span>
-							<i class="iconfont icon-24gf-playSquare" style="margin-right: 1.2vw"></i>
+							<i class="iconfont icon-24gf-playSquare" style="margin-right: .5625rem"></i>
 							67.9万
 						</span>
 						<span>
-							<i class="iconfont icon-comment" style="margin-right: 1.2vw"></i>
+							<i class="iconfont icon-comment" style="margin-right: .5625rem"></i>
+							1386
+						</span>
+					</div>
+				</div>
+				<div class="title">《原神》EP - 逆风散羽之别</div>
+			</li>
+
+			<li class="item">
+				<div class="img-box">
+					<img src="https://i0.hdslb.com/bfs/archive/d2d046d59828853b3526fccebb07e72d091f8a908.jpg@480w_270h_1c.webp"
+						alt="" />
+					<div class="count">
+						<span>
+							<i class="iconfont icon-24gf-playSquare" style="margin-right: .5625rem"></i>
+							67.9万
+						</span>
+						<span>
+							<i class="iconfont icon-comment" style="margin-right: .5625rem"></i>
 							1386
 						</span>
 					</div>
@@ -451,11 +469,11 @@
 						alt="" />
 					<div class="count">
 						<span>
-							<i class="iconfont icon-24gf-playSquare" style="margin-right: 1.2vw"></i>
+							<i class="iconfont icon-24gf-playSquare" style="margin-right: .5625rem"></i>
 							67.9万
 						</span>
 						<span>
-							<i class="iconfont icon-comment" style="margin-right: 1.2vw"></i>
+							<i class="iconfont icon-comment" style="margin-right: .5625rem"></i>
 							1386
 						</span>
 					</div>
@@ -469,11 +487,11 @@
 						alt="" />
 					<div class="count">
 						<span>
-							<i class="iconfont icon-24gf-playSquare" style="margin-right: 1.2vw"></i>
+							<i class="iconfont icon-24gf-playSquare" style="margin-right: .5625rem"></i>
 							67.9万
 						</span>
 						<span>
-							<i class="iconfont icon-comment" style="margin-right: 1.2vw"></i>
+							<i class="iconfont icon-comment" style="margin-right: .5625rem"></i>
 							1386
 						</span>
 					</div>
@@ -487,11 +505,11 @@
 						alt="" />
 					<div class="count">
 						<span>
-							<i class="iconfont icon-24gf-playSquare" style="margin-right: 1.2vw"></i>
+							<i class="iconfont icon-24gf-playSquare" style="margin-right: .5625rem"></i>
 							67.9万
 						</span>
 						<span>
-							<i class="iconfont icon-comment" style="margin-right: 1.2vw"></i>
+							<i class="iconfont icon-comment" style="margin-right: .5625rem"></i>
 							1386
 						</span>
 					</div>
@@ -505,11 +523,11 @@
 						alt="" />
 					<div class="count">
 						<span>
-							<i class="iconfont icon-24gf-playSquare" style="margin-right: 1.2vw"></i>
+							<i class="iconfont icon-24gf-playSquare" style="margin-right: .5625rem"></i>
 							67.9万
 						</span>
 						<span>
-							<i class="iconfont icon-comment" style="margin-right: 1.2vw"></i>
+							<i class="iconfont icon-comment" style="margin-right: .5625rem"></i>
 							1386
 						</span>
 					</div>
@@ -523,11 +541,11 @@
 						alt="" />
 					<div class="count">
 						<span>
-							<i class="iconfont icon-24gf-playSquare" style="margin-right: 1.2vw"></i>
+							<i class="iconfont icon-24gf-playSquare" style="margin-right: .5625rem"></i>
 							67.9万
 						</span>
 						<span>
-							<i class="iconfont icon-comment" style="margin-right: 1.2vw"></i>
+							<i class="iconfont icon-comment" style="margin-right: .5625rem"></i>
 							1386
 						</span>
 					</div>
@@ -541,11 +559,11 @@
 						alt="" />
 					<div class="count">
 						<span>
-							<i class="iconfont icon-24gf-playSquare" style="margin-right: 1.2vw"></i>
+							<i class="iconfont icon-24gf-playSquare" style="margin-right: .5625rem"></i>
 							67.9万
 						</span>
 						<span>
-							<i class="iconfont icon-comment" style="margin-right: 1.2vw"></i>
+							<i class="iconfont icon-comment" style="margin-right: .5625rem"></i>
 							1386
 						</span>
 					</div>
@@ -559,29 +577,11 @@
 						alt="" />
 					<div class="count">
 						<span>
-							<i class="iconfont icon-24gf-playSquare" style="margin-right: 1.2vw"></i>
+							<i class="iconfont icon-24gf-playSquare" style="margin-right: .5625rem"></i>
 							67.9万
 						</span>
 						<span>
-							<i class="iconfont icon-comment" style="margin-right: 1.2vw"></i>
-							1386
-						</span>
-					</div>
-				</div>
-				<div class="title">《原神》EP - 逆风散羽之别</div>
-			</li>
-
-			<li class="item">
-				<div class="img-box">
-					<img src="https://i0.hdslb.com/bfs/archive/d2d046d59828853b3526fccebb07e72d09f8a908.jpg@480w_270h_1c.webp"
-						alt="" />
-					<div class="count">
-						<span>
-							<i class="iconfont icon-24gf-playSquare" style="margin-right: 1.2vw"></i>
-							67.9万
-						</span>
-						<span>
-							<i class="iconfont icon-comment" style="margin-right: 1.2vw"></i>
+							<i class="iconfont icon-comment" style="margin-right: .5625rem"></i>
 							1386
 						</span>
 					</div>
